--- a/blog/core/templates/department/index.html
+++ b/blog/core/templates/department/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <h4>hi from index.html core</h4>
+    <h4>hi from index.html department</h4>
 </body>
 </html>
