--- a/blog/core/templates/department/index.html
+++ b/blog/core/templates/department/index.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% extends 'core/base.html' %}
+
+
+{%  block content %}
+
+
 <body>
-    <h4>hi from index.html department</h4>
+    <br>
+    <br>
+
+    <div class="text-center">
+
+        <h3>Departments</h3>
+        <br>
+
+
+
+    {% for department in departments %}
+       <div class="card m-4 shadow-sm">
+  <div class="card-header">
+  <h4>{{ department.department_name }} </h4>
+  </div>
+  <div class="card-body">
+    <blockquote class="blockquote mb-0">
+      <p>Number of employees:</p>
+      <footer class="blockquote-footer">{{ department.employee_count }}</footer>
+    </blockquote>
+       <br>
+         <a class="btn btn-success btn-sm" href="{% url 'department' department.id %}"><i class="fa fa-eye" aria-hidden="true"></i></a>
+  </div>
+</div>
+    {% endfor %}
+
+
+
+
+    </div>
+<div class="text-center">
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+</div>
+
 </body>
-</html>
+
+
+{% endblock %}
+
+
